// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Searchbar snapshots should render default component 1`] = `
<div class="searchbar" style="width: 200px;">
  <div class="icon"><svg version="1.1" width="16" height="16" viewBox="0 0 16 16" class="octicon octicon-search" aria-hidden="true">
      <path fill-rule="evenodd" d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"></path>
    </svg></div> <input name="searchbar" type="text" class="searchbar-input">
  <div class="clear-input" style="display: none;">
    <div class="icon"><svg version="1.1" width="18" height="18" viewBox="0 0 16 16" class="octicon octicon-x" aria-hidden="true">
        <path fill-rule="evenodd" d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"></path>
      </svg></div>
  </div>
</div>
`;

exports[`Searchbar snapshots should render with a custom placeholder 1`] = `
<div class="searchbar" style="width: 200px;">
  <div class="icon"><svg version="1.1" width="16" height="16" viewBox="0 0 16 16" class="octicon octicon-search" aria-hidden="true">
      <path fill-rule="evenodd" d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"></path>
    </svg></div> <input name="searchbar" placeholder="I'm a random placeholder" type="text" class="searchbar-input">
  <div class="clear-input" style="display: none;">
    <div class="icon"><svg version="1.1" width="18" height="18" viewBox="0 0 16 16" class="octicon octicon-x" aria-hidden="true">
        <path fill-rule="evenodd" d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"></path>
      </svg></div>
  </div>
</div>
`;

exports[`Searchbar snapshots should render with a custom width 1`] = `
<div class="searchbar" style="width: 300px;">
  <div class="icon"><svg version="1.1" width="16" height="16" viewBox="0 0 16 16" class="octicon octicon-search" aria-hidden="true">
      <path fill-rule="evenodd" d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"></path>
    </svg></div> <input name="searchbar" type="text" class="searchbar-input">
  <div class="clear-input" style="display: none;">
    <div class="icon"><svg version="1.1" width="18" height="18" viewBox="0 0 16 16" class="octicon octicon-x" aria-hidden="true">
        <path fill-rule="evenodd" d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"></path>
      </svg></div>
  </div>
</div>
`;
